[package]
name = "geo-coding-cli"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
fs = { version = "3.2.2", package = "fs-err" }
geo-coding = { path = "..", features = ["std"] }
human-units = { version = "0.5.3", features = ["si-units"] }
memmap2 = "0.9.10"
osmpbf = { version = "0.3.7" }
rayon = { version = "1.11.0" }
zstd = "0.13.3"
